--- a/lab1/Makefile
+++ b/lab1/Makefile
@@ -2,14 +2,16 @@
 .ONESHELL:
 SHELL := /bin/bash
 WS ?= dev1
-KMS_KEY ?=$(shell cat bootstrap/kms_key.out)
 OS ?=linux
 PLAN_FILE=plan-$(WS).out
 TERRAFORM_BIN=terraform
-TERRAFORM_BUCKET ?=$(shell cat bootstrap/terraform_bucket_name.out)
 COMMON_TFVARS=vars/common.tfvars
 WS_TFVARS=vars/ws-$(WS).tfvars
 ZONE ?= europe-west2-a
+
+AUTOMATION_SERVICE_ACCOUNT ?=$(shell cat bootstrap/automation_service_account.out)
+KMS_KEY ?=$(shell cat bootstrap/kms_key.out)
+TERRAFORM_BUCKET ?=$(shell cat bootstrap/terraform_bucket_name.out)
 
 help:
 	@echo "help ..."
@@ -25,6 +27,20 @@ set-env:
 	@if [ ! -f "$(WS_TFVARS)" ]; then \
 		echo "Could not find workspace variables file: $(WS_TFVARS)" ;\
 		ERROR=1; \
+	fi
+
+	@if [ -z $(AUTOMATION_SERVICE_ACCOUNT) ]; then \
+		echo "AUTOMATION_SERVICE_ACCOUNT was not set" ;\
+		ERROR=1; \
+	else \
+		echo "AUTOMATION_SERVICE_ACCOUNT: $(AUTOMATION_SERVICE_ACCOUNT)" ;\
+	fi
+
+	@if [ -z $(KMS_KEY) ]; then \
+		echo "KMS_KEY was not set" ;\
+		ERROR=1; \
+	else \
+		echo "KMS_KEY: $(KMS_KEY)" ;\
 	fi
 
 	@if [ -z $(TERRAFORM_BUCKET) ]; then \
@@ -66,7 +82,8 @@ bootstrap-apply:
 		bootstrap.out && \
 	rm bootstrap.out && \
 	$(TERRAFORM_BIN) output terraform_bucket_name > terraform_bucket_name.out && \
-	$(TERRAFORM_BIN) output kms_key > kms_key.out
+	$(TERRAFORM_BIN) output kms_key > kms_key.out && \
+    $(TERRAFORM_BIN) output automation_service_account > automation_service_account.out
 
 bootstrap-output:
 	@echo "$@ ..."
@@ -95,7 +112,9 @@ init: set-env
 		-backend=true \
 		-backend-config="bucket=$(TERRAFORM_BUCKET)" \
 		-var-file="$(COMMON_TFVARS)" \
-		-var-file="$(WS_TFVARS)"
+		-var-file="$(WS_TFVARS)" \
+		-var automation_service_account="$(AUTOMATION_SERVICE_ACCOUNT)" \
+		-var kms_key="$(KMS_KEY)"
 	@echo "Switching to workspace $(WS)"
 	@$(TERRAFORM_BIN) workspace select $(WS) || $(TERRAFORM_BIN) workspace new $(WS)
 
@@ -108,7 +127,9 @@ refresh: set-env prep
 	@$(TERRAFORM_BIN) refresh \
 		-input=false \
 		-var-file="$(COMMON_TFVARS)" \
-		-var-file="$(WS_TFVARS)"
+		-var-file="$(WS_TFVARS)" \
+		-var automation_service_account="$(AUTOMATION_SERVICE_ACCOUNT)" \
+		-var kms_key="$(KMS_KEY)"
 
 update:
 	@echo "$@ ..."
@@ -126,6 +147,7 @@ plan: set-env prep
 		-refresh=true \
 		-var-file="$(COMMON_TFVARS)" \
 		-var-file="$(WS_TFVARS)" \
+		-var automation_service_account="$(AUTOMATION_SERVICE_ACCOUNT)" \
 		-var kms_key="$(KMS_KEY)" \
 		-out=$(PLAN_FILE)
 
@@ -136,6 +158,7 @@ plan-target: set-env prep
 		-refresh=true \
 		-var-file="$(COMMON_TFVARS)" \
 		-var-file="$(WS_TFVARS)" \
+		-var automation_service_account="$(AUTOMATION_SERVICE_ACCOUNT)" \
 		-var kms_key="$(KMS_KEY)" \
 		-target $(RESOURCE) \
 		-out=$(PLAN_FILE)
@@ -153,7 +176,9 @@ apply2: set-env prep
 		-input=false \
 		-refresh=true \
 		-var-file="$(COMMON_TFVARS)" \
-		-var-file="$(WS_TFVARS)"
+		-var-file="$(WS_TFVARS)" \
+		-var automation_service_account="$(AUTOMATION_SERVICE_ACCOUNT)" \
+		-var kms_key="$(KMS_KEY)"
 
 destroy: set-env prep
 	@echo "destroy ..."
@@ -163,6 +188,7 @@ destroy: set-env prep
 		-refresh=true \
 		-var-file="$(COMMON_TFVARS)" \
 		-var-file="$(WS_TFVARS)" \
+		-var automation_service_account="$(AUTOMATION_SERVICE_ACCOUNT)" \
 		-var kms_key="$(KMS_KEY)"
 
 destroy-target: set-env prep
@@ -173,6 +199,8 @@ destroy-target: set-env prep
 		-refresh=true \
 		-var-file="$(COMMON_TFVARS)" \
 		-var-file="$(WS_TFVARS)" \
+		-var automation_service_account="$(AUTOMATION_SERVICE_ACCOUNT)" \
+		-var kms_key="$(KMS_KEY)" \
 		-target $(RESOURCE)
 
 taint: set-env prep
